# speedtest-local

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250329_0001_initial.py  20250330_0002_app_settings_and_anomalies.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/api/routes/: admin.py  anomalies.py  clients.py  config.py  export_routes.py  health.py  measure.py  settings.py  stats.py  tests.py
backend/app/middleware/: timing.py
backend/app/services/: anomaly_service.py  app_settings_service.py  client_service.py  prune_service.py  stats_service.py  test_run_service.py
backend/scripts/: prune.py  seed.py
backend/tests/integration/: conftest.py  test_api.py  test_phase2.py  test_stats_agg.py
backend/tests/unit/: test_app_settings_service.py  test_moving_average.py
docs/: anomaly-detection.md  api.md  architecture.md  deployment.md  measurement-methodology.md  probe-agent.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: GaugeTile.tsx  Layout.test.tsx  Layout.tsx
frontend/src/pages/: AnalyticsPage.tsx  HistoryPage.tsx  RunTestPage.tsx  SettingsPage.test.tsx  SettingsPage.tsx  (+1 more)
probe-agent/: Dockerfile  README.md  pyproject.toml
probe-agent/probe_agent/: __init__.py  cli.py  measure.py  stats.py
probe-agent/tests/: test_stats.py
(+7 files in other folders)
