[project]
name = "speedtest-local-probe"
version = "0.1.0"
description = "Headless LAN speedtest probe for speedtest-local"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "typer>=0.15.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.8.0"]

[project.scripts]
probe = "probe_agent.cli:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["probe_agent*"]

[tool.ruff]
line-length = 100
target-version = "py311"
